--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
-        "axios": "^0.21",
+        "axios": "^0.21.4",
         "bootstrap": "^5.1.3",
         "browser-sync": "^2.27.7",
         "browser-sync-webpack-plugin": "^2.3.0",
@@ -26,7 +26,12 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "@vue/server-renderer": "^3.2.30",
+        "@vueuse/components": "^7.6.0",
+        "@vueuse/core": "^7.6.0",
+        "@vueuse/head": "^0.7.5",
+        "pinia": "^2.0.11",
         "vue-router": "^4.0.12",
-        "vuex": "^4.0.2"
+        "vue-routisan": "^3.0.0-beta.5"
     }
 }
